simple is better than complex

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <body>
     <h1>Fede Laport</h1>
-    <h2>Python and Typescript Engineer</h2>
+    <h2>Structural & Software Engineer</h2>
     <p>
         Find me on <a href="https://twitter.com/echefede" target="_blank">twitter</a>,
         <a href="https://instagram.com/echefede" target="_blank">insta</a>,
@@ -90,11 +90,7 @@
         Keys on <a href="https://keybase.io/echefede" target="_blank">keybase</a>.
         Hire me on <a href="https://www.malt.es/profile/federicolaportrivas" target="_blank">malt</a>.
     </p>
-    <p>Made <a href="https://braced.io" target="_blank">braced.io</a>. Still growing.</p>
-    <p>Former structural engineer.</p>
-    <p>Bitcoiner, libertarian.</p>
-    <p>Hacker.</p>
-    <p>🙏🏽</p>
+    <p>Founded <a href="https://eng.braced.io" target="_blank">Braced Engineering</a>.</p>
 
 </body>
 
