--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             /* background-color: #3a3a3a;
           color: rgb(0, 255, 34); */
             margin: 3em;
-            text-align: center;
+            text-align: left;
 
         }
 
@@ -81,16 +81,18 @@
 <body>
     <h1>Fede Laport</h1>
     <h2>Structural & Software Engineer</h2>
+    <br>
+    <p>
+        Building web services and interfaces for energy and construction companies.
+    </p>
     <p>
         Find me on <a href="https://twitter.com/echefede" target="_blank">twitter</a>,
         <a href="https://instagram.com/echefede" target="_blank">insta</a>,
         <a href="https://www.linkedin.com/in/federicolaport/" target="_blank">linkedin</a>.
     </p>
     <p>
-        Keys on <a href="https://keybase.io/echefede" target="_blank">keybase</a>.
-        Hire me on <a href="https://www.malt.es/profile/federicolaportrivas" target="_blank">malt</a>.
+        My company <a href="https://eng.braced.io" target="_blank">Braced Engineering</a>.
     </p>
-    <p>Founded <a href="https://eng.braced.io" target="_blank">Braced Engineering</a>.</p>
 
 </body>
 
