--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-96018115-3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'UA-96018115-3');
@@ -21,60 +24,7 @@
     <meta name="author" content="Fede Laport">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Fira Mono', serif;
-            color: #555555;
-            background-color: #f8f9fc;
-            /* background-color: #3a3a3a;
-          color: rgb(0, 255, 34); */
-            margin: 3em;
-            text-align: left;
-
-        }
-
-        ::selection {
-            background-color: #3a3a3a;
-            color: rgb(0, 255, 34);
-        }
-
-
-
-        /* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
-        @media (min-width: 631px) {
-            p {
-                font-size: 1.5em;
-            }
-
-            h1 {
-                font-size: 4em;
-            }
-
-            h2 {
-                font-size: 2em;
-            }
-        }
-
-        /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
-        @media (max-width: 630px) {
-            p {
-                font-size: 0.8em;
-            }
-
-            h1 {
-                font-size: 2.5em;
-            }
-
-            h2 {
-                font-size: 1em;
-            }
-        }
-
-        .footer {
-            margin-top: 6em;
-            font-size: 1.1em;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -83,15 +33,20 @@
     <h2>Structural & Software Engineer</h2>
     <br>
     <p>
-        Building web services and interfaces for energy and construction companies.
+        Building web services and interfaces for timber frame construction factories on <a href="https://produuz.it"
+            target="_blank">produuz.it</a>.
     </p>
+    <p> Built systems for bitcoin market makers and traders, energy traders, and BIM for AEC.
+    </p>
+    <p> Also some other cool stuff, too much text.</p>
     <p>
-        Find me on <a href="https://twitter.com/echefede" target="_blank">twitter</a>,
-        <a href="https://instagram.com/echefede" target="_blank">insta</a>,
+        I'm on <a href="https://twitter.com/echefede" target="_blank">twitter</a>,
+        <a href="https://github.com/fedelaport" target="_blank">github</a>,
         <a href="https://www.linkedin.com/in/federicolaport/" target="_blank">linkedin</a>.
     </p>
     <p>
-        My company <a href="https://eng.braced.io" target="_blank">Braced Engineering</a>.
+        Work with us: <a href="https://eng.braced.io" target="_blank">Braced Engineering</a> and
+        <a href="https://connectinq.nl" target="_blank">ConnectinQ</a>.
     </p>
 
 </body>
