--- a/index.html
+++ b/index.html
@@ -32,21 +32,17 @@
     <h1>Fede Laport</h1>
     <h2>Structural & Software Engineer</h2>
     <br>
+<p>
+    Building web services and interfaces for industrialized construction factories on <a href="https://produuz.it" target="_blank">produuz.it</a>.
+</p>
+<p>
+    Designed systems for Bitcoin market makers and traders, energy traders, and BIM for AEC.
+</p>
+
     <p>
-        Building web services and interfaces for timber frame construction factories on <a href="https://produuz.it"
-            target="_blank">produuz.it</a>.
-    </p>
-    <p> Built systems for bitcoin market makers and traders, energy traders, and BIM for AEC.
-    </p>
-    <p> Also some other cool stuff, too much text.</p>
-    <p>
-        I'm on <a href="https://twitter.com/echefede" target="_blank">twitter</a>,
+        I'm on <a href="https://twitter.com/fedelaport" target="_blank">twitter</a>,
         <a href="https://github.com/fedelaport" target="_blank">github</a>,
         <a href="https://www.linkedin.com/in/federicolaport/" target="_blank">linkedin</a>.
-    </p>
-    <p>
-        Work with us: <a href="https://eng.braced.io" target="_blank">Braced Engineering</a> and
-        <a href="https://connectinq.nl" target="_blank">ConnectinQ</a>.
     </p>
 
 </body>
